Switch to CSS grid to fix wrapping of long lines on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -150,26 +150,50 @@ body {
   display: initial;
 }
 
-.log-table{
+.log-list{
   // button height + (4px padding * 2) + (1px border * 2)
   $controls-height: calc(2.5em + 8px + 2px);
   margin-top: $controls-height;
   margin-bottom: 0 !important; // Override Bulma .table:not(:last-child)
+  font-family: monospace;
+  display: grid;
+  grid-template-columns: 5fr 95fr;
+  row-gap: 0.25rem;
 
   @media screen and (max-width: $mobile-breakpoint) {
     margin-bottom: $controls-height !important; // Override Bulma .table:not(:last-child)
     margin-top: 0;
+  }
+
+  .log-entry {
+    display: contents;
+    &:nth-child(even){
+      div {
+        background-color: $light;
+      }
+    }
+
+    .log-entry__ts {
+      grid-column: 1;
+      padding-right: 0.5rem;
+    }
+
+    .log-entry__content {
+      grid-column: 2;
+      word-break: break-word;
+    }
+  }
+
+  .plain-log-entry {
+    text-align: center;
+    font-family: $family-sans-serif;
+    grid-column: 1 / 3;
   }
 }
 
 #status {
   margin: .5em 4px;
   flex-grow: 1;
-}
-
-.plain-log-entry {
-  text-align: center;
-  font-family: $family-sans-serif;
 }
 
 .button > .icon {
